lei20_21_s4_2dk_03/base.core/src/main/java/eapli/base/gramaticas/formulario/validacao_formulario/LinguagemFormularioParser.java
// Generated from C:/Users/paulo/OneDrive/Documentos/lprog/src/main/java/eapli/base/gramaticas/formulario/validacao_formulario\LinguagemFormulario.g4 by ANTLR 4.9.1
package eapli.base.gramaticas.formulario.validacao_formulario;
 // classes a incluir
    import java.util.*;
    import java.lang.*;
    import java.io.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LinguagemFormularioParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, DIA=14, MES=15, ANO=16, WORD=17, 
		NUMERO=18, LETRA=19, WS=20, NEWLINE=21;
	public static final int
		RULE_start = 0, RULE_formulario = 1, RULE_pedido = 2, RULE_pedidoAusencia = 3, 
		RULE_data = 4, RULE_tAusencia = 5, RULE_justificacao = 6, RULE_pedidoDesconto = 7, 
		RULE_codigoInterno = 8, RULE_nome = 9, RULE_tipoDesconto = 10, RULE_recorrencia = 11, 
		RULE_desconto = 12, RULE_percentagemDesconto = 13, RULE_valorDesconto = 14, 
		RULE_fundamentacaoPedidos = 15, RULE_identFatura = 16, RULE_pedidoResidencia = 17, 
		RULE_morada = 18, RULE_porta = 19, RULE_rua = 20, RULE_codigoPostal = 21, 
		RULE_localidade = 22, RULE_pedidoCotacaoVendas = 23, RULE_codigoPoduto = 24, 
		RULE_quantidadePretendida = 25, RULE_tipoCliente = 26, RULE_aprovacao = 27, 
		RULE_aprovacaoAusencia = 28, RULE_fundamentacaoRespostaAusencia = 29, 
		RULE_aprovacaoDesconto = 30, RULE_fundamentacaoRespostaDesconto = 31, 
		RULE_realizacao = 32, RULE_realizacaoAusencia = 33, RULE_ferias = 34, 
		RULE_diasJaGozados = 35, RULE_diasGozadosPeridoSolicitado = 36, RULE_feriasTotais = 37, 
		RULE_faltasJustificadas = 38, RULE_diasFaltasJustificadasPeriodoSolicitado = 39, 
		RULE_faltasJustificadasTotais = 40, RULE_faltasInjustificadas = 41, RULE_faltasInjustificadasPeriodoSolicitado = 42, 
		RULE_faltasInjustificadasTotais = 43, RULE_comentario = 44, RULE_realizacaoResidencia = 45, 
		RULE_observacoes = 46, RULE_frase = 47, RULE_resposta = 48, RULE_identificador = 49, 
		RULE_real = 50, RULE_digitos = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "formulario", "pedido", "pedidoAusencia", "data", "tAusencia", 
			"justificacao", "pedidoDesconto", "codigoInterno", "nome", "tipoDesconto", 
			"recorrencia", "desconto", "percentagemDesconto", "valorDesconto", "fundamentacaoPedidos", 
			"identFatura", "pedidoResidencia", "morada", "porta", "rua", "codigoPostal", 
			"localidade", "pedidoCotacaoVendas", "codigoPoduto", "quantidadePretendida", 
			"tipoCliente", "aprovacao", "aprovacaoAusencia", "fundamentacaoRespostaAusencia", 
			"aprovacaoDesconto", "fundamentacaoRespostaDesconto", "realizacao", "realizacaoAusencia", 
			"ferias", "diasJaGozados", "diasGozadosPeridoSolicitado", "feriasTotais", 
			"faltasJustificadas", "diasFaltasJustificadasPeriodoSolicitado", "faltasJustificadasTotais", 
			"faltasInjustificadas", "faltasInjustificadasPeriodoSolicitado", "faltasInjustificadasTotais", 
			"comentario", "realizacaoResidencia", "observacoes", "frase", "resposta", 
			"identificador", "real", "digitos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'/'", "'Ferias'", "'Justificada'", "'Nao justificada'", "'Unica'", 
			"'Ate Data Limite'", "'-'", "'Nacional'", "'Europeu'", "'Resto do Mundo'", 
			"'Aprovado'", "'Recusado'", "'.'", null, null, null, null, null, null, 
			null, "'\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "DIA", "MES", "ANO", "WORD", "NUMERO", "LETRA", "WS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LinguagemFormulario.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LinguagemFormularioParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public FormularioContext formulario() {
			return getRuleContext(FormularioContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LinguagemFormularioParser.EOF, 0); }
		public TerminalNode NEWLINE() { return getToken(LinguagemFormularioParser.NEWLINE, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				formulario();
				setState(105);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				formulario();
				setState(108);
				match(NEWLINE);
				setState(109);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormularioContext extends ParserRuleContext {
		public PedidoContext pedido() {
			return getRuleContext(PedidoContext.class,0);
		}
		public AprovacaoContext aprovacao() {
			return getRuleContext(AprovacaoContext.class,0);
		}
		public RealizacaoContext realizacao() {
			return getRuleContext(RealizacaoContext.class,0);
		}
		public FormularioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formulario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterFormulario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitFormulario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitFormulario(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormularioContext formulario() throws RecognitionException {
		FormularioContext _localctx = new FormularioContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_formulario);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				pedido();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				aprovacao();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				realizacao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PedidoContext extends ParserRuleContext {
		public PedidoAusenciaContext pedidoAusencia() {
			return getRuleContext(PedidoAusenciaContext.class,0);
		}
		public PedidoDescontoContext pedidoDesconto() {
			return getRuleContext(PedidoDescontoContext.class,0);
		}
		public PedidoResidenciaContext pedidoResidencia() {
			return getRuleContext(PedidoResidenciaContext.class,0);
		}
		public PedidoCotacaoVendasContext pedidoCotacaoVendas() {
			return getRuleContext(PedidoCotacaoVendasContext.class,0);
		}
		public PedidoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pedido; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterPedido(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitPedido(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitPedido(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PedidoContext pedido() throws RecognitionException {
		PedidoContext _localctx = new PedidoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pedido);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				pedidoAusencia();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				pedidoDesconto();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				pedidoResidencia();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				pedidoCotacaoVendas();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PedidoAusenciaContext extends ParserRuleContext {
		public PedidoAusenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pedidoAusencia; }
	 
		public PedidoAusenciaContext() { }
		public void copyFrom(PedidoAusenciaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VerificarDataContext extends PedidoAusenciaContext {
		public DataContext dataInicio;
		public DataContext dataFim;
		public TAusenciaContext ausencia;
		public JustificacaoContext just;
		public List<DataContext> data() {
			return getRuleContexts(DataContext.class);
		}
		public DataContext data(int i) {
			return getRuleContext(DataContext.class,i);
		}
		public TAusenciaContext tAusencia() {
			return getRuleContext(TAusenciaContext.class,0);
		}
		public JustificacaoContext justificacao() {
			return getRuleContext(JustificacaoContext.class,0);
		}
		public VerificarDataContext(PedidoAusenciaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterVerificarData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitVerificarData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitVerificarData(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VerificarDataSemJustContext extends PedidoAusenciaContext {
		public DataContext dataInicio;
		public DataContext dataFim;
		public TAusenciaContext ausencia;
		public List<DataContext> data() {
			return getRuleContexts(DataContext.class);
		}
		public DataContext data(int i) {
			return getRuleContext(DataContext.class,i);
		}
		public TAusenciaContext tAusencia() {
			return getRuleContext(TAusenciaContext.class,0);
		}
		public VerificarDataSemJustContext(PedidoAusenciaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterVerificarDataSemJust(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitVerificarDataSemJust(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitVerificarDataSemJust(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PedidoAusenciaContext pedidoAusencia() throws RecognitionException {
		PedidoAusenciaContext _localctx = new PedidoAusenciaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pedidoAusencia);
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new VerificarDataContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				((VerificarDataContext)_localctx).dataInicio = data();
				setState(125);
				((VerificarDataContext)_localctx).dataFim = data();
				setState(126);
				((VerificarDataContext)_localctx).ausencia = tAusencia();
				setState(127);
				((VerificarDataContext)_localctx).just = justificacao();
				}
				break;
			case 2:
				_localctx = new VerificarDataSemJustContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				((VerificarDataSemJustContext)_localctx).dataInicio = data();
				setState(130);
				((VerificarDataSemJustContext)_localctx).dataFim = data();
				setState(131);
				((VerificarDataSemJustContext)_localctx).ausencia = tAusencia();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public TerminalNode DIA() { return getToken(LinguagemFormularioParser.DIA, 0); }
		public TerminalNode MES() { return getToken(LinguagemFormularioParser.MES, 0); }
		public TerminalNode ANO() { return getToken(LinguagemFormularioParser.ANO, 0); }
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitData(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_data);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIA:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(DIA);
				setState(136);
				match(T__0);
				setState(137);
				match(MES);
				setState(138);
				match(T__0);
				setState(139);
				match(ANO);
				}
				break;
			case ANO:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(ANO);
				setState(141);
				match(T__0);
				setState(142);
				match(MES);
				setState(143);
				match(T__0);
				setState(144);
				match(DIA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TAusenciaContext extends ParserRuleContext {
		public TAusenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tAusencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterTAusencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitTAusencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitTAusencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TAusenciaContext tAusencia() throws RecognitionException {
		TAusenciaContext _localctx = new TAusenciaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tAusencia);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JustificacaoContext extends ParserRuleContext {
		public FraseContext frase() {
			return getRuleContext(FraseContext.class,0);
		}
		public JustificacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_justificacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterJustificacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitJustificacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitJustificacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JustificacaoContext justificacao() throws RecognitionException {
		JustificacaoContext _localctx = new JustificacaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_justificacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			frase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PedidoDescontoContext extends ParserRuleContext {
		public CodigoInternoContext codigoInterno() {
			return getRuleContext(CodigoInternoContext.class,0);
		}
		public NomeContext nome() {
			return getRuleContext(NomeContext.class,0);
		}
		public TipoDescontoContext tipoDesconto() {
			return getRuleContext(TipoDescontoContext.class,0);
		}
		public RecorrenciaContext recorrencia() {
			return getRuleContext(RecorrenciaContext.class,0);
		}
		public DescontoContext desconto() {
			return getRuleContext(DescontoContext.class,0);
		}
		public IdentFaturaContext identFatura() {
			return getRuleContext(IdentFaturaContext.class,0);
		}
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public FundamentacaoPedidosContext fundamentacaoPedidos() {
			return getRuleContext(FundamentacaoPedidosContext.class,0);
		}
		public PedidoDescontoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pedidoDesconto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterPedidoDesconto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitPedidoDesconto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitPedidoDesconto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PedidoDescontoContext pedidoDesconto() throws RecognitionException {
		PedidoDescontoContext _localctx = new PedidoDescontoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pedidoDesconto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			codigoInterno();
			setState(152);
			nome();
			setState(153);
			tipoDesconto();
			setState(154);
			recorrencia();
			setState(155);
			desconto();
			setState(156);
			identFatura();
			setState(157);
			data();
			setState(158);
			fundamentacaoPedidos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodigoInternoContext extends ParserRuleContext {
		public List<TerminalNode> LETRA() { return getTokens(LinguagemFormularioParser.LETRA); }
		public TerminalNode LETRA(int i) {
			return getToken(LinguagemFormularioParser.LETRA, i);
		}
		public List<TerminalNode> NUMERO() { return getTokens(LinguagemFormularioParser.NUMERO); }
		public TerminalNode NUMERO(int i) {
			return getToken(LinguagemFormularioParser.NUMERO, i);
		}
		public CodigoInternoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codigoInterno; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterCodigoInterno(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitCodigoInterno(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitCodigoInterno(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodigoInternoContext codigoInterno() throws RecognitionException {
		CodigoInternoContext _localctx = new CodigoInternoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_codigoInterno);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(LETRA);
			setState(161);
			match(LETRA);
			setState(162);
			match(LETRA);
			setState(163);
			match(NUMERO);
			setState(164);
			match(NUMERO);
			setState(165);
			match(NUMERO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NomeContext extends ParserRuleContext {
		public FraseContext frase() {
			return getRuleContext(FraseContext.class,0);
		}
		public NomeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nome; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterNome(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitNome(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitNome(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NomeContext nome() throws RecognitionException {
		NomeContext _localctx = new NomeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_nome);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			frase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoDescontoContext extends ParserRuleContext {
		public FraseContext frase() {
			return getRuleContext(FraseContext.class,0);
		}
		public TipoDescontoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoDesconto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).enterTipoDesconto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemFormularioListener ) ((LinguagemFormularioListener)listener).exitTipoDesconto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemFormularioVisitor ) return ((LinguagemFormularioVisitor<? extends T>)visitor).visitTipoDesconto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoDescontoContext tipoDesconto() throws RecognitionException {
		TipoDescontoContext _localctx = new TipoDescontoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tipoDesconto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			frase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
